# GKlib

./: .travis.yml  CMakeLists.txt  GKlibSystem.cmake  Makefile  README.md
apps/: CMakeLists.txt
cmake/: GKlibSystem.cmake
include/: GKlib.h  gk_arch.h  gk_macros.h  gk_mkrandom.h  gk_proto.h
src/: GKlib.h  error.c  fs.c  gk_arch.h  graph.c  io.c  string.c  timers.c
